salesforce-main/src/main/default/objects/Lead/fields/rfi_Query_Notes__c.field-meta.xml
<CustomField>
    <fullName>rfi_Query_Notes__c</fullName>
    <label>Query Notes</label>
    <type>TextArea</type>
</CustomField>