salesforce-main/src/main/default/objects/Lead/fields/rfi_Start_Year__c.field-meta.xml
<CustomField>
    <fullName>rfi_Start_Year__c</fullName>
    <label>Start Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2017</fullName>
            </value>
            <value>
                <fullName>2018</fullName>
            </value>
            <value>
                <fullName>2019</fullName>
            </value>
            <value>
                <fullName>2020</fullName>
            </value>
            <value>
                <fullName>2021</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>