salesforce-main/src/main/default/objects/Lead/fields/rfi_What_are_you_Studying__c.field-meta.xml
<CustomField>
    <fullName>rfi_What_are_you_Studying__c</fullName>
    <label>What are you Studying?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Undergraduate</fullName>
            </value>
            <value>
                <fullName>Postgraduate</fullName>
            </value>
            <value>
                <fullName>CPD/Professional Development</fullName>
            </value>
            <value>
                <fullName>Professional Qualifications</fullName>
            </value>
            <value>
                <fullName>Apprenticeships</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>