salesforce-main/src/main/default/objects/Lead/fields/rfi_What_is_your_query_about__c.field-meta.xml
<CustomField>
    <fullName>rfi_What_is_your_query_about__c</fullName>
    <label>What is your query about?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Booking a New Course</fullName>
            </value>
            <value>
                <fullName>Student Support</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Careers</fullName>
            </value>
            <value>
                <fullName>Books/Materials</fullName>
            </value>
            <value>
                <fullName>VLE or IT Support</fullName>
            </value>
            <value>
                <fullName>Induction/Joining Instructions</fullName>
            </value>
            <value>
                <fullName>Accommodation</fullName>
            </value>
            <value>
                <fullName>VISA/CAS</fullName>
            </value>
            <value>
                <fullName>Alumni</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>