salesforce-main/src/main/default/objects/Lead/fields/Sector_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Sector_Level_1__c</fullName>
    <label>Sector Level 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CIMA</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Industry &amp; Commerce</fullName>
            </value>
            <value>
                <fullName>Private (Individuals)</fullName>
            </value>
            <value>
                <fullName>Professional Firms</fullName>
            </value>
            <value>
                <fullName>Public Sector</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>