salesforce-main/src/main/default/objects/Lead/fields/Sector_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Sector_Level_2__c</fullName>
    <label>Sector Level 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sector_Level_1__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Accountancy</fullName>
            </value>
            <value>
                <fullName>Aerospace &amp; Defence</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Central Bank</fullName>
            </value>
            <value>
                <fullName>Charity</fullName>
            </value>
            <value>
                <fullName>Commercial Bank</fullName>
            </value>
            <value>
                <fullName>Committee</fullName>
            </value>
            <value>
                <fullName>Consumer Business</fullName>
            </value>
            <value>
                <fullName>Corporate Bank</fullName>
            </value>
            <value>
                <fullName>CPS</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Educational Establishment</fullName>
            </value>
            <value>
                <fullName>Employer</fullName>
            </value>
            <value>
                <fullName>Energy, Infrastructure &amp; Utilities (EIU)</fullName>
            </value>
            <value>
                <fullName>Exchange</fullName>
            </value>
            <value>
                <fullName>Government Department</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Investment Bank</fullName>
            </value>
            <value>
                <fullName>Investment Management</fullName>
            </value>
            <value>
                <fullName>Law Firm</fullName>
            </value>
            <value>
                <fullName>Life Sciences</fullName>
            </value>
            <value>
                <fullName>Local Authority</fullName>
            </value>
            <value>
                <fullName>Management Consultancy</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Police</fullName>
            </value>
            <value>
                <fullName>Private Equity</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Regulator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>