salesforce-main/src/main/default/objects/Lead/fields/Sector_Level_3__c.field-meta.xml
<CustomField>
    <fullName>Sector_Level_3__c</fullName>
    <label>Sector Level 3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sector_Level_2__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Top 100</fullName>
            </value>
            <value>
                <fullName>2 Partners</fullName>
            </value>
            <value>
                <fullName>1 Partner</fullName>
            </value>
            <value>
                <fullName>Law Centre</fullName>
            </value>
            <value>
                <fullName>Licensed Conveyancer</fullName>
            </value>
            <value>
                <fullName>Legal Costing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Top 60</fullName>
            </value>
            <value>
                <fullName>BGTS</fullName>
            </value>
            <value>
                <fullName>Police Force</fullName>
            </value>
            <value>
                <fullName>Police Authority</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>