salesforce-main/src/main/default/objects/Lead/fields/Self_Registration_Validation_URL__c.field-meta.xml
<CustomField>
    <fullName>Self_Registration_Validation_URL__c</fullName>
    <label>Self Registration Validation URL</label>
    <type>Url</type>
</CustomField>