salesforce-main/src/main/default/objects/Lead/fields/Send_email_with_MP_link_login_info__c.field-meta.xml
<CustomField>
    <fullName>Send_email_with_MP_link_login_info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send email with MP link &amp; login info</label>
    <type>Checkbox</type>
</CustomField>