salesforce-main/src/main/default/objects/Lead/fields/SMS_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>SMS_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SMS Opt In field in line with GDPR compliance. Linked to Marketing Cloud and student preference centre</description>
    <label>SMS Opt In</label>
    <type>Checkbox</type>
</CustomField>