salesforce-main/src/main/default/objects/Lead/fields/SRN__c.field-meta.xml
<CustomField>
    <fullName>SRN__c</fullName>
    <label>SRN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>