salesforce-main/src/main/default/objects/Lead/fields/Start_Date_Score__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Score__c</fullName>
    <description>Anticipated Start Date lead score value</description>
    <formula>IF( ( Anticipated_Start_Date__c - TODAY() ) &lt; 90, 120,
IF( ( Anticipated_Start_Date__c - TODAY() ) &lt; 180, 80,
IF( ( Anticipated_Start_Date__c - TODAY() ) &lt;= 270, 50,
IF( ( Anticipated_Start_Date__c - TODAY() ) &gt; 270, 30,
0 ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>