salesforce-main/src/main/default/objects/Lead/fields/Status_Score__c.field-meta.xml
<CustomField>
    <fullName>Status_Score__c</fullName>
    <description>Status lead score</description>
    <formula>CASE( Status,
&apos;New&apos;, 100,
&apos;Establishing Contact&apos;, 30,
&apos;Nurturing&apos;, -500,
&apos;Re-engaged&apos;, 100,
&apos;No Further Action&apos;, -2000,
-1000 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>