salesforce-main/src/main/default/objects/Lead/fields/Transfer_Student_Record_Number_to_CRM__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Student_Record_Number_to_CRM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transfer Student Record Number to CRM</label>
    <type>Checkbox</type>
</CustomField>