salesforce-main/src/main/default/objects/Lead/fields/V2V_Cycle_Contact_Attempts__c.field-meta.xml
<CustomField>
    <fullName>V2V_Cycle_Contact_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Counts the number of attempted V2V contacts between lead and agent before lead is engaged - current lead cycle</description>
    <label>V2V Cycle Contact Attempts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>