salesforce-main/src/main/default/objects/Lead/fields/V2V_Cycle_Engagements__c.field-meta.xml
<CustomField>
    <fullName>V2V_Cycle_Engagements__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Counts the number of V2V engagements between lead and agent - current lead cycle</description>
    <label>V2V Cycle Engagements</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>