salesforce-main/src/main/default/objects/Lead/fields/Vanta_ID__c.field-meta.xml
<CustomField>
    <fullName>Vanta_ID__c</fullName>
    <label>Vanta ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>