salesforce-main/src/main/default/objects/Lead/fields/Vanta_PS_Status__c.field-meta.xml
<CustomField>
    <fullName>Vanta_PS_Status__c</fullName>
    <label>Vanta PS Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre-enrolment appointment to book</fullName>
                <default>true</default>
                <label>Pre-enrolment appointment to book</label>
            </value>
            <value>
                <fullName>Pre-enrolment appointment booked</fullName>
            </value>
            <value>
                <fullName>Pre-enrolment appointment completed</fullName>
            </value>
            <value>
                <fullName>Pre-enrolment Assessment to organize</fullName>
            </value>
            <value>
                <fullName>Pre-enrolment Assessment organized</fullName>
            </value>
            <value>
                <fullName>Pre-enrolment assessment completed (&amp; FU meeting to book)</fullName>
            </value>
            <value>
                <fullName>Pre-enrolment assessment not completed</fullName>
            </value>
            <value>
                <fullName>Pre-enrolment assessment FU meeting completed</fullName>
            </value>
            <value>
                <fullName>Application completed</fullName>
            </value>
            <value>
                <fullName>Application not completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>