salesforce-main/src/main/default/objects/Lead/recordTypes/Business_Development.recordType-meta.xml
<RecordType>
    <fullName>Business_Development</fullName>
    <active>true</active>
    <businessProcess>Business Development</businessProcess>
    <description>Business_Development Lead</description>
    <label>Business Development</label>
</RecordType>