salesforce-main/src/main/default/objects/Lead/recordTypes/Prospective_Student.recordType-meta.xml
<RecordType>
    <fullName>Prospective_Student</fullName>
    <active>true</active>
    <businessProcess>Prospective Student</businessProcess>
    <description>Prospective Student</description>
    <label>Prospective Student</label>
</RecordType>