salesforce-main/src/main/default/objects/Lead/recordTypes/RFI_Form.recordType-meta.xml
<RecordType>
    <fullName>RFI_Form</fullName>
    <active>true</active>
    <businessProcess>Prospective Student</businessProcess>
    <description>data from RFI form</description>
    <label>RFI Form</label>
</RecordType>