salesforce-main/src/main/default/objects/Lead/validationRules/Company_Field_Cannot_Be_Populated.validationRule-meta.xml
<ValidationRule>
    <fullName>Company_Field_Cannot_Be_Populated</fullName>
    <active>true</active>
    <description>The Company field must not be populated for student leads.</description>
    <errorConditionFormula>RecordType.Name = &apos;Prospective Student&apos; &amp;&amp;
NOT(ISBLANK(Company))</errorConditionFormula>
    <errorDisplayField>Company</errorDisplayField>
    <errorMessage>This is a student lead and the Company field cannot be populated.</errorMessage>
</ValidationRule>