salesforce-main/src/main/default/objects/Lead/validationRules/Preferred_Email_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Preferred_Email_Required</fullName>
    <active>true</active>
    <description>For leads, if an email address is populated, then preferred email address field must be set.</description>
    <errorConditionFormula>AND( RecordType.DeveloperName = &apos;Prospective_Student&apos;,

AND(TEXT(Preferred_Email__c) = NULL,

NOT( AND(
Personal_Email__c=null,
Work_Email__c=null,
Billing_Email__c=null,
Other_Email__c=null
))))</errorConditionFormula>
    <errorDisplayField>Preferred_Email__c</errorDisplayField>
    <errorMessage>Please select a preferred email address.</errorMessage>
</ValidationRule>