salesforce-main/src/main/default/objects/Lead/validationRules/Validate_Work_Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Work_Phone</fullName>
    <active>true</active>
    <description>Check if phone number has only these: numbers or - or + or ( or )</description>
    <errorConditionFormula>IF(ISBLANK( Work_Phone__c ),false,Not( IF(ISNUMBER(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( 
SUBSTITUTE(SUBSTITUTE( Work_Phone__c , &quot;-&quot; , &quot;&quot;),&quot;+&quot;,&quot;&quot; ) 
,&quot;(&quot;,&quot;&quot; ) 
,&quot;)&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;)), 
LEN(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( 
SUBSTITUTE(SUBSTITUTE( Work_Phone__c , &quot;-&quot; , &quot;&quot;),&quot;+&quot;,&quot;&quot; ) 
,&quot;(&quot;,&quot;&quot; ) 
,&quot;)&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;))&lt;=20,false) 
))</errorConditionFormula>
    <errorMessage>Enter a valid Work phone number: Max length 20 digits</errorMessage>
</ValidationRule>